--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="XSCard Enterprise - Digital Business Card Management Platform" />
+    <meta name="keywords" content="business cards, digital cards, networking, enterprise, contact management" />
+    <meta name="author" content="XSCard Enterprise" />
+    <meta property="og:title" content="XSCard Enterprise" />
+    <meta property="og:description" content="Digital Business Card Management Platform" />
+    <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#667eea" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>XSCard Enterprise</title>
   </head>
